# HardcoreEngine

./: .clang-format  .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md  component_holder.h  movement_system.h  renderer.h
.github/workflows/: build.yml
docs/architecture/: architecture.md
include/: component.h  ecs.h  entity.h  renderer.h  shader_utils.h  system.h
shaders/: particle.vert
src/: main.cpp  movement_system.cpp  shader_utils.cpp
